<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RocketGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="MenuBackgroundColor">#0099FF</color>
    <string name="GameName">SUPER ROCKET RAMPAGE</string>
    <string name="GameName1">SUPER</string>
    <string name="GameName2">ROCKET</string>
    <string name="GameName3">RAMPAGE</string>
    <string name="start">Start</string>
    <string name="highscores">Highscores</string>
    <string name="achievements">Achievements</string>
    <string name="highscores">Highscores</string>
    <string name="back">Back</string>
    <string name="shop">Shop</string>
    <string name="upgrades">Upgrades</string>
    <color name="MenuHeaderBackgroundColor">#FF1919</color>
    <color name="ButtonBackgroundColor">#424242</color>
    <string name="ButtonGameOver">Return To Shop</string>
    <string name="GameOver">Game Over</string>
    <string name="SignIn">Sign In</string>
	<string name="SignOut">Sign Out</string>
</resources>
